# news_agent

./: .env.example  .gitignore  CELERY_SETUP.md  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  generate_graph.py  langgraph_diagram.md  main.py  pyproject.toml  test_debug.sh
scripts/: process_daily_news.py  start_celery.sh
src/: __init__.py  celery_app.py
src/api/: main.py
src/database/: client.py
src/services/: conversation.py  embeddings.py  news_fetcher.py  news_processor.py  translator.py
src/tasks/: maintenance_tasks.py  news_tasks.py
